サンプル実装の見た目を微調整しました

--- a/public/sample.html
+++ b/public/sample.html
@@ -98,7 +98,7 @@ window.onload = () => {
     </script>
   </head>
   <body>
-    <div style="width: 400px; height: 600px; float:left;">
+    <div style="width: 450px; height: 600px; float:left;">
     <div id="vacant" style="display: none">
       <h1>お風呂は空いてます！</h1>
       <div>
@@ -113,7 +113,7 @@ window.onload = () => {
     </div>
     </div>
     <div style="width: 300px; float:left; padding-left: 30px;">
-      <h1>ログ</h1>
+      <h1>今日の利用状況</h1>
       <svg id="svg1" width="250" height="720" xmlns="http://www.w3.org/2000/svg">
       </svg>
     </div>
